# chess-turn-engine

./: Cargo.toml  LICENSE  README.md
src/: game.rs  lib.rs
src/game/: availableturn.rs  board.rs  board_map.rs  builder.rs  castling_rights.rs  castlinginfo.rs  display.rs  enpassant.rs  game_error.rs  gamestate.rs  king.rs  movement.rs  play.rs  side.rs  simulation.rs  state.rs
tests/: integration_test.rs
