[package]
name = "chess-turn-engine"
version = "0.1.3"
edition = "2021"
authors = ["Rqnsom"]
repository = "https://github.com/Rqnsom/chess-turn-engine"
description = "Chess turn engine library with all chess rules implemented. Can be used to implement a chess game."
documentation = "https://docs.rs/chess-turn-engine/"
keywords = ["chess", "chess-turn-engine"]
license = "MIT"
readme = "README.md"

[dependencies]
chess-notation-parser = "0.2"
